--- a/gpreport/requirements.txt
+++ b/gpreport/requirements.txt
@@ -11,4 +11,10 @@ tox==3.14.0
 coverage==4.5.4
 Sphinx==1.8.5
 twine==1.14.0
+sqlalchemy==1.3.23
+pathlib==1.0.1
+pydantic==1.7.3
+python-dotenv==0.15.0
+psycopg2==2.8.6
+schedule==1.0.0
 
